@@ -109,7 +109,7 @@ func ExampleRunner() {
 		return
 	}
 
-	connector, err := module.NewConnector(b.Publisher, config)
+	connector, err := module.NewConnector(b.Publisher, config, nil)
 	if err != nil {
 		return
 	}
